--- a/front_server/public/index.html
+++ b/front_server/public/index.html
@@ -3,11 +3,11 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="description" content="Prática em Engenharia de Software" />
+        <meta name="description" content="Instructions for using the HP Anyware Remote System Controller (RSC) testing platform" />
         <link rel="icon" href="/favicon.ico" type="image/x-icon"/>
         <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
         <link rel="stylesheet" href="/styles.css" />
-        <title>PUCRS Prática em Engenharia de Software</title>
+        <title>HP RSC Testing Platform</title>
     </head>
     <body>
         <div id="root"></div>
